--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
         repository:
           - SimonAlling/better-sweclockers
           - SimonAlling/example-userscript
-        node-version: [14.x]
+        node-version: [14.x, 16.x]
       fail-fast: false
     steps:
       - uses: actions/checkout@v1
