--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.39.9",
     "@types/yargs": "^13.0.3",
-    "awesome-typescript-loader": "^5.2.0",
     "css-loader": "^3.2.0",
     "fs-extra": "^8.1.0",
     "lines-unlines": "^1.0.0",
@@ -98,6 +97,7 @@
     "schema-utils": "^2.5.0",
     "terser-webpack-plugin": "^2.3.1",
     "to-string-loader": "^1.1.6",
+    "ts-loader": "^8.4.0",
     "ts-type-guards": "^0.6.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "userscript-metadata": "^1.0.0",
