--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -17,6 +17,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           validateSingleCommit: true
-          subjectPattern: ^(?![a-z]).+$
+          subjectPattern: ^(v\d+\.\d+\.\d+|(?![a-z]).+)$
           subjectPatternError: |
-            The subject "{subject}" found in the pull request title didn't match the required pattern. Please ensure that the subject doesn't start with a lowercase character.
+            The subject "{subject}" found in the pull request title didn't match the required pattern. Please ensure that the subject doesn't start with a lowercase character, or that it is a SemVer version (e.g. "v1.0.0").
