--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,23 @@
 {
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "declaration": true,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
         "lib": [
             "es2018",
-            "dom"
+            "dom",
         ],
-        "target": "es2018",
-        "declaration": true,
-        "strict": true,
         "module": "es2015",
-        "removeComments": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
         "moduleResolution": "node",
-        "outDir": "."
+        "outDir": ".",
+        "removeComments": true,
+        "strict": true,
+        "target": "es2018",
     },
     "exclude": [],
     "include": [
-        "src/**/*.ts"
-    ]
+        "src/**/*.ts",
+    ],
 }
