--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": ".",
