--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "compilerOptions": {
+        "allowJs": false,
         "allowSyntheticDefaultImports": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
         "declaration": true,
         "emitDecoratorMetadata": true,
         "esModuleInterop": true,
@@ -11,6 +14,11 @@
         ],
         "module": "es2015",
         "moduleResolution": "node",
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "outDir": ".",
         "removeComments": true,
         "strict": true,
