build: Build to dist/

--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
   "bugs": {
     "url": "https://github.com/simonalling/userscripter/issues"
   },
-  "main": "lib/index",
+  "main": "dist/lib/index",
   "exports": {
     ".": {
-      "import": "./lib/index.mjs",
-      "require": "./lib/index.js"
+      "import": "./dist/lib/index.mjs",
+      "require": "./dist/lib/index.js"
     },
     "./build": {
-      "import": "./build/index.mjs",
-      "require": "./build/index.js"
+      "import": "./dist/build/index.mjs",
+      "require": "./dist/build/index.js"
     },
     "./lib/*": {
-      "import": "./lib/*.mjs",
-      "require": "./lib/*.js"
+      "import": "./dist/lib/*.mjs",
+      "require": "./dist/lib/*.js"
     }
   },
   "typesVersions": {
     "*": {
       "build": [
-        "./build/index.d.ts"
+        "./dist/build/index.d.ts"
       ],
       "lib/*": [
-        "./lib/*.d.ts"
+        "./dist/lib/*.d.ts"
       ],
       "*": [
         "This prevents imports of internal modules from compiling in TypeScript."
@@ -51,13 +51,10 @@
     }
   },
   "files": [
-    "bin/*",
-    "bootstrap/*",
-    "build/*",
-    "lib/*"
+    "dist/*"
   ],
   "bin": {
-    "userscripter": "./bin/cli.js"
+    "userscripter": "./dist/bin/cli.js"
   },
   "scripts": {
     "build-cjs": "npm run clean && npm run compile-cjs",
@@ -65,10 +62,10 @@
     "compile-cjs": "tsc -d --module CommonJS -p .",
     "compile-esm": "tsc -d -p .",
     "build": "npm run clean && npm run compile-esm && npm run rename && npm run compile-cjs",
-    "clean": "rm -rf lib build bin",
+    "clean": "rm -rf dist",
     "lint": "eslint . --ext .ts,.tsx",
     "prepublishOnly": "npm run verify && cli-confirm 'Publish?'",
-    "rename": "renamer --force --find \"/\\.js$/\" --replace \".mjs\" \"lib/**\" \"build/**\"",
+    "rename": "renamer --force --find \"/\\.js$/\" --replace \".mjs\" \"dist/**\"",
     "test": "npm run lint && npm run jest",
     "jest": "jest",
     "verify": "repository-check-dirty && npm ci && npm run build && npm test && npm pack"
