--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
         "noPropertyAccessFromIndexSignature": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "outDir": ".",
+        "outDir": "dist",
         "removeComments": true,
         "strict": true,
         "target": "es2018",
