--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "noUnusedParameters": true,
         "outDir": ".",
         "removeComments": true,
+        "rootDir": "src",
         "strict": true,
         "target": "es2018",
     },
