--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [16.20.2]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -55,7 +55,7 @@ jobs:
         repository:
           - SimonAlling/better-sweclockers
           - SimonAlling/example-userscript
-        node-version: [16.x]
+        node-version: [16.20.2]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
