ci: Make bootstrapped userscript a dependent one

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,8 +69,15 @@ jobs:
     strategy:
       matrix:
         repository:
-          - SimonAlling/better-sweclockers
-          - SimonAlling/example-userscript
+          - ownerSlashName: SimonAlling/better-sweclockers
+            refInRepo: master
+            pathInRepo: ""
+          - ownerSlashName: SimonAlling/example-userscript
+            refInRepo: master
+            pathInRepo: ""
+          - ownerSlashName: SimonAlling/userscripter
+            refInRepo: ${{ github.sha }}
+            pathInRepo: bootstrap/
         node-version: [16.20.2]
       fail-fast: false
     steps:
@@ -94,24 +101,25 @@ jobs:
       - name: Clone userscript
         uses: actions/checkout@v2
         with:
-          repository: ${{ matrix.repository }}
-          path: dependent-userscripts/${{ matrix.repository }} # Must be relative to github.workspace, apparently.
+          repository: ${{ matrix.repository.ownerSlashName }}
+          ref: ${{ matrix.repository.refInRepo }}
+          path: dependent-userscripts/${{ matrix.repository.ownerSlashName }} # Must be relative to github.workspace, apparently.
           fetch-depth: 1
       - name: Move userscript
         run: |
           mkdir -p "${TARGET_DIR}"
-          mv --no-target-directory "${{ github.workspace }}/dependent-userscripts/${{ matrix.repository }}" "${TARGET_DIR}"
+          mv --no-target-directory "${{ github.workspace }}/dependent-userscripts/${{ matrix.repository.ownerSlashName }}" "${TARGET_DIR}"
         env:
-          TARGET_DIR: ${{ runner.temp }}/${{ matrix.repository }}
+          TARGET_DIR: ${{ runner.temp }}/${{ matrix.repository.ownerSlashName }}
       - name: Install userscript dependencies
-        working-directory: ${{ runner.temp }}/${{ matrix.repository }}
+        working-directory: ${{ runner.temp }}/${{ matrix.repository.ownerSlashName }}/${{ matrix.repository.pathInRepo }}
         run: |
           npm ci
       - name: Install Userscripter
-        working-directory: ${{ runner.temp }}/${{ matrix.repository }}
+        working-directory: ${{ runner.temp }}/${{ matrix.repository.ownerSlashName }}/${{ matrix.repository.pathInRepo }}
         run: |
           npm install "${{ steps.pack.outputs.tarball }}"
       - name: Build userscript
-        working-directory: ${{ runner.temp }}/${{ matrix.repository }}
+        working-directory: ${{ runner.temp }}/${{ matrix.repository.ownerSlashName }}/${{ matrix.repository.pathInRepo }}
         run: |
           npm run build
