--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,7 @@ jobs:
           npm ci
           npm run build
   userscripts:
-    name: Dependent: ${{ matrix.repository.humanReadableName }} (Node ${{ matrix.node-version }})
+    name: "Dependent: ${{ matrix.repository.humanReadableName }} (Node ${{ matrix.node-version }})"
     runs-on: ubuntu-22.04
     strategy:
       matrix:
