--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   nightly:
-    name: CI Build
+    name: Check package
     runs-on: ubuntu-22.04
     strategy:
       matrix:
@@ -40,7 +40,7 @@ jobs:
         env:
           CI: true
   bootstrap:
-    name: Check Bootstrapped Userscript
+    name: Check bootstrapped userscript
     runs-on: ubuntu-22.04
     strategy:
       matrix:
