--- a/package.json
+++ b/package.json
@@ -70,17 +70,18 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@types/jest": "27.5.2",
+    "@types/jest": "28.1.8",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.33.0",
     "cli-confirm": "^1.0.1",
     "eslint": "^7.25.0",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "27.5.1",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
     "renamer": "^1.1.4",
     "repository-check-dirty": "^1.0.2",
     "rimraf": "5.0.7",
-    "ts-jest": "27.1.5",
+    "ts-jest": "28.0.8",
     "ts-preferences": "^2.0.0",
     "typescript": "4.4.4"
   },
