--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -12,7 +12,7 @@
     "app-root-path": "^3.0.0",
     "rimraf": "^3.0.2",
     "ts-preferences": "^2.0.0",
-    "typescript": "^3.7.4",
+    "typescript": "4.5.5",
     "userscript-metadata": "^1.0.0",
     "userscripter": "5.0.0",
     "webpack": "^4.41.5",
