--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "sideEffects": false,
   "devDependencies": {
     "@types/jest": "29.5.12",
+    "@types/terser-webpack-plugin": "2.2.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "cli-confirm": "^1.0.1",
@@ -90,7 +91,6 @@
   },
   "dependencies": {
     "@types/sass": "^1.16.0",
-    "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.39.9",
     "css-loader": "^3.2.0",
     "lines-unlines": "^1.0.0",
