--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "ts-preferences": "^2.0.0"
   },
   "dependencies": {
+    "@types/node": ">=12.0.0 <16.0.0",
     "@types/sass": "^1.16.0",
     "@types/webpack": "^4.41.38",
     "css-loader": "^3.2.0",
