--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   },
   "dependencies": {
     "@types/sass": "^1.16.0",
+    "@types/webpack": "^4.41.38",
     "css-loader": "^3.2.0",
     "lines-unlines": "^1.0.0",
     "node-sass-utils": "^1.1.3",
