build: Enable noUncheckedIndexedAccess

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
         "noPropertyAccessFromIndexSignature": true,
+        "noUncheckedIndexedAccess": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": ".",
