--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "declaration": true,
         "emitDecoratorMetadata": true,
         "esModuleInterop": true,
+        "exactOptionalPropertyTypes": true,
         "experimentalDecorators": true,
         "lib": [
             "es2018",
