--- a/package.json
+++ b/package.json
@@ -92,20 +92,20 @@
   "dependencies": {
     "@types/node": "16.18.31",
     "@types/sass": "^1.16.0",
-    "@types/webpack": "^4.41.38",
-    "css-loader": "^3.2.0",
+    "@types/webpack": "^5.28.5",
+    "css-loader": "^7.1.2",
     "lines-unlines": "^1.0.0",
     "node-sass-utils": "^1.1.3",
     "raw-loader": "^4.0.0",
     "sass": "^1.32.8",
     "sass-loader": "10.1.1",
-    "terser-webpack-plugin": "^2.3.1",
     "to-string-loader": "^1.1.6",
     "ts-loader": "^8.4.0",
     "ts-type-guards": "^0.6.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "userscript-metadata": "^1.0.0",
     "webextension-manifest": "^1.0.0",
-    "webpack": "^4.47.0"
+    "webpack": "5.101.1",
+    "webpack-sources": "^3.3.3"
   }
 }
